Updated OpenOCD. Rebuilt version: 0.10.0+dev-00226-g1c2e3d41d (2017-12-23-10:15)
git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/chibistudio_trunk@11171 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/tools/openocd/scripts/board/st_nucleo_f2.cfg
+++ b/tools/openocd/scripts/board/st_nucleo_f2.cfg
@@ -1,6 +1,6 @@
 # This is an ST NUCLEO F207 board.
 
-source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink.cfg]
 
 transport select hla_swd
 
