--- a/tools/chibios_config_wizard/plugin.xml
+++ b/tools/chibios_config_wizard/plugin.xml
@@ -49,6 +49,9 @@
           <uri
             name="http://www.chibios.org/xml/schema/boards/stm32f7xx_board.xsd"
             uri="resources/gencfg/schema/boards/stm32f7xx_board.xsd" />
+          <uri
+            name="http://www.chibios.org/xml/schema/boards/stm32fhxx_board.xsd"
+            uri="resources/gencfg/schema/boards/stm32h7xx_board.xsd" />
          <uri
             name="http://www.chibios.org/xml/schema/boards/stm32l0xx_board.xsd"
             uri="resources/gencfg/schema/boards/stm32l0xx_board.xsd" />
