git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/chibios_lazarus@11910 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/projects/testgen/testgen.lpi
+++ b/projects/testgen/testgen.lpi
@@ -41,7 +41,7 @@
       <Unit1>
         <Filename Value="mainform.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="SuiteForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
@@ -66,7 +66,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -76,6 +76,9 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="EXMLSuiteException"/>
+      </Item4>
     </Exceptions>
   </Debugging>
 </CONFIG>
