--- a/demos/STM32/RT-STM32L476-DISCOVERY-SB_CLIENT/Makefile
+++ b/demos/STM32/RT-STM32L476-DISCOVERY-SB_CLIENT/Makefile
@@ -106,7 +106,7 @@ include $(CHIBIOS)/os/common/startup/ARMCMx-SB/compilers/GCC/mk/startup.mk
 # RTOS files (optional).
 #include $(CHIBIOS)/os/rt/rt.mk
 #include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk
-include $(CHIBIOS)/os/sb/host/sbuser.mk
+include $(CHIBIOS)/os/sb/user/sbuser.mk
 # Auto-build files in ./source recursively.
 include $(CHIBIOS)/tools/mk/autobuild.mk
 # Other files (optional).
