Fixes in G4 support.
git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/chibistudio_trunk@13017 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/tools/chibios_config_wizard/plugin.xml
+++ b/tools/chibios_config_wizard/plugin.xml
@@ -52,6 +52,9 @@
          <uri
             name="http://www.chibios.org/xml/schema/boards/stm32g0xx_board.xsd"
             uri="resources/gencfg/schema/boards/stm32g0xx_board.xsd" />
+         <uri
+            name="http://www.chibios.org/xml/schema/boards/stm32g4xx_board.xsd"
+            uri="resources/gencfg/schema/boards/stm32g4xx_board.xsd" />
           <uri
             name="http://www.chibios.org/xml/schema/boards/stm32fhxx_board.xsd"
             uri="resources/gencfg/schema/boards/stm32h7xx_board.xsd" />
